--- a/package.json
+++ b/package.json
@@ -4,15 +4,22 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "dev": "node server.mjs",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "vite build --ssrManifest --outDir dist/client",
+    "build:server": "vite build --ssr src/entry-server.js --outDir dist/server",
+    "preview": "NODE_ENV=production node server.mjs"
   },
   "dependencies": {
     "vue": "^3.4.37"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
+    "compression": "^1.7.4",
+    "h3": "^1.12.0",
+    "listhen": "^1.7.2",
+    "nitropack": "^2.9.7",
+    "sirv": "^2.0.4",
     "typescript": "^5.5.3",
     "vite": "^5.4.1",
     "vue-tsc": "^2.0.29"
