--- a/package.json
+++ b/package.json
@@ -11,6 +11,14 @@
     "preview": "NODE_ENV=production node server.mjs"
   },
   "dependencies": {
+    "destr": "^2.0.3",
+    "ofetch": "^1.3.4",
+    "ohash": "^1.1.3",
+    "perfect-debounce": "^1.0.0",
+    "shiki": "^1.16.2",
+    "ufo": "^1.5.4",
+    "uncrypto": "^0.1.3",
+    "unctx": "^2.3.1",
     "vue": "^3.4.37"
   },
   "devDependencies": {
