--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "node server.mjs",
-    "build": "npm run build:client && npm run build:server",
+    "dev": "pnpm run build && pnpm run preview",
+    "build": "npm run build:client && npm run build:server && npm run build:island",
     "build:client": "vite build --ssrManifest --outDir dist/client",
     "build:server": "vite build --ssr src/entry-server.js --outDir dist/server",
+    "build:island": "vite build --ssr src/entry-island.js --outDir dist/island",
     "preview": "NODE_ENV=production node server.mjs"
   },
   "dependencies": {
     "destr": "^2.0.3",
+    "highlight.js": "^11.10.0",
     "ofetch": "^1.3.4",
     "ohash": "^1.1.3",
     "perfect-debounce": "^1.0.0",
@@ -23,11 +25,14 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
+    "autoprefixer": "^10.4.20",
     "compression": "^1.7.4",
     "h3": "^1.12.0",
     "listhen": "^1.7.2",
     "nitropack": "^2.9.7",
+    "postcss": "^8.4.47",
     "sirv": "^2.0.4",
+    "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "vite": "^5.4.1",
     "vue-tsc": "^2.0.29"
