--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "build:client": "vite build --ssrManifest --outDir dist/client",
     "build:server": "vite build --ssr src/entry-server.js --outDir dist/server",
     "build:island": "vite build --ssr src/entry-island.js --outDir dist/island",
-    "preview": "NODE_ENV=production node server.mjs"
+    "preview": "NODE_ENV=production tsx server.ts",
+    "dev:nitro": "pnpm run build && nitro dev"
   },
   "dependencies": {
     "destr": "^2.0.3",
     "highlight.js": "^11.10.0",
+    "magic-string": "^0.30.11",
     "ofetch": "^1.3.4",
     "ohash": "^1.1.3",
     "perfect-debounce": "^1.0.0",
     "shiki": "^1.16.2",
     "ufo": "^1.5.4",
+    "ultrahtml": "^1.5.3",
     "uncrypto": "^0.1.3",
     "unctx": "^2.3.1",
     "vue": "^3.4.37"
@@ -33,7 +36,10 @@
     "postcss": "^8.4.47",
     "sirv": "^2.0.4",
     "tailwindcss": "^3.4.11",
+    "tsx": "^4.19.1",
     "typescript": "^5.5.3",
+    "unenv": "^1.10.0",
+    "unplugin": "^1.14.1",
     "vite": "^5.4.1",
     "vue-tsc": "^2.0.29"
   }
