--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "pnpm run build && pnpm run preview",
+    "dev": "tsx server.ts",
     "build": "npm run build:client && npm run build:server && npm run build:island",
     "build:client": "vite build --ssrManifest --outDir dist/client",
-    "build:server": "vite build --ssr src/entry-server.js --outDir dist/server",
-    "build:island": "vite build --ssr src/entry-island.js --outDir dist/island",
-    "preview": "NODE_ENV=production tsx server.ts",
+    "build:server": "vite build --ssr src/entry-server.js --outDir dist/server --config vite.ssr.config.ts",
+    "build:island": "vite build --ssr src/entry-island.js --outDir dist/island --config vite.ssr.config.ts",
+    "preview": "pnpm run build && NODE_ENV=production tsx server.ts",
     "dev:nitro": "pnpm run build && nitro dev"
   },
   "dependencies": {
