--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "destr": "^2.0.3",
     "highlight.js": "^11.10.0",
     "magic-string": "^0.30.11",
+    "marked": "^14.1.2",
     "ofetch": "^1.3.4",
     "ohash": "^1.1.3",
     "perfect-debounce": "^1.0.0",
+    "sanitize-html": "^2.13.1",
     "shiki": "^1.16.2",
     "ufo": "^1.5.4",
     "ultrahtml": "^1.5.3",
@@ -27,6 +29,7 @@
     "vue": "^3.4.37"
   },
   "devDependencies": {
+    "@types/sanitize-html": "^2.13.0",
     "@vitejs/plugin-vue": "^5.1.2",
     "autoprefixer": "^10.4.20",
     "compression": "^1.7.4",
